add "remove ad" support

--- a/Draw/Controller/Shop/ItemShopController.xib
+++ b/Draw/Controller/Shop/ItemShopController.xib
@@ -110,6 +110,7 @@
 						<string key="NSFrame">{{8, 167}, {304, 283}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
@@ -193,7 +194,7 @@
 						<string key="NSFrame">{{56, 68}, {122, 33}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="961979671"/>
+						<reference key="NSNextKeyView" ref="520131245"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -226,7 +227,7 @@
 						<string key="NSFrame">{{56, 119}, {122, 33}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="520131245"/>
+						<reference key="NSNextKeyView" ref="76800230"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -249,12 +250,34 @@
 						<string key="NSFrame">{{186, 113}, {117, 37}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="664813526"/>
+						<reference key="NSNextKeyView" ref="10754972"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<string key="IBUINormalTitle">coin shop</string>
+						<reference key="IBUIHighlightedTitleColor" ref="768977271"/>
+						<reference key="IBUINormalTitleColor" ref="768977271"/>
+						<object class="NSColor" key="IBUINormalTitleShadowColor">
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MAA</bytes>
+							<reference key="NSCustomColorSpace" ref="678624967"/>
+						</object>
+						<reference key="IBUIFontDescription" ref="812044927"/>
+						<reference key="IBUIFont" ref="273613029"/>
+					</object>
+					<object class="IBUIButton" id="76800230">
+						<reference key="NSNextResponder" ref="191373211"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{185, 113}, {117, 37}}</string>
+						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="961979671"/>
+						<bool key="IBUIOpaque">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<string key="IBUINormalTitle">remove ad</string>
 						<reference key="IBUIHighlightedTitleColor" ref="768977271"/>
 						<reference key="IBUINormalTitleColor" ref="768977271"/>
 						<object class="NSColor" key="IBUINormalTitleShadowColor">
@@ -271,7 +294,7 @@
 						<string key="NSFrame">{{188, 66}, {115, 37}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="10754972"/>
+						<reference key="NSNextKeyView" ref="664813526"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -357,6 +380,14 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">removeAdButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="76800230"/>
+					</object>
+					<int key="connectionID">36</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
 						<reference key="source" ref="10754972"/>
 						<reference key="destination" ref="372490531"/>
@@ -398,6 +429,15 @@
 					</object>
 					<int key="connectionID">31</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickRemoveAd:</string>
+						<reference key="source" ref="76800230"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">35</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -422,6 +462,7 @@
 							<reference ref="959748451"/>
 							<reference ref="961979671"/>
 							<reference ref="520131245"/>
+							<reference ref="76800230"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -492,6 +533,11 @@
 						<reference key="object" ref="520131245"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">33</int>
+						<reference key="object" ref="76800230"/>
+						<reference key="parent" ref="191373211"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -510,13 +556,14 @@
 				<string key="20.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="27.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="30.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="33.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">32</int>
+			<int key="maxID">36</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -526,6 +573,7 @@
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="clickBackButton:">id</string>
 						<string key="clickGotoCoinShopButton:">id</string>
+						<string key="clickRemoveAd:">id</string>
 						<string key="showYoumiWall">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
@@ -535,6 +583,10 @@
 						</object>
 						<object class="IBActionInfo" key="clickGotoCoinShopButton:">
 							<string key="name">clickGotoCoinShopButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="clickRemoveAd:">
+							<string key="name">clickRemoveAd:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 						<object class="IBActionInfo" key="showYoumiWall">
@@ -547,6 +599,7 @@
 						<string key="freeGetCoinsButton">UIButton</string>
 						<string key="gotoCoinShopButton">UIButton</string>
 						<string key="itemAmountLabel">UILabel</string>
+						<string key="removeAdButton">UIButton</string>
 						<string key="titleLabel">UILabel</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
@@ -565,6 +618,10 @@
 						<object class="IBToOneOutletInfo" key="itemAmountLabel">
 							<string key="name">itemAmountLabel</string>
 							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="removeAdButton">
+							<string key="name">removeAdButton</string>
+							<string key="candidateClassName">UIButton</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="titleLabel">
 							<string key="name">titleLabel</string>
